--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 
+<meta name="viewport" content="width=device-width,initial-scale=1">
+
 <head>
     <meta charset="utf-8">
     <title>Among Us 特殊役抽選ツール</title>
@@ -10,7 +12,7 @@
 
 <body>
     <div id="app">
-        <b-navbar toggleable="lg" type="dark" variant="info">
+        <b-navbar toggleable="xs" type="dark" variant="info">
             <b-navbar-brand>特殊役抽選ツール</b-navbar-brand>
             <b-navbar-toggle target="nav-collapse"></b-navbar-toggle>
             <b-collapse id="nav-collapse" is-nav>
