--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,27 +12,7 @@
 
 <body>
     <div id="app">
-        <b-navbar toggleable="xs" type="dark" variant="info">
-            <b-navbar-brand>特殊役抽選ツール</b-navbar-brand>
-            <b-navbar-toggle target="nav-collapse"></b-navbar-toggle>
-            <b-collapse id="nav-collapse" is-nav>
-                <b-navbar-nav>
-                    <b-nav-item>
-                        <router-link class="no-color-change" tag="a" to="/">抽選</router-link>
-                    </b-nav-item>
-                    <b-nav-item v-if="this.$store.getters.joined">
-                        <router-link class="no-color-change" tag="a" to="/admin">設定</router-link>
-                    </b-nav-item>
-                    <b-nav-item>
-                        <router-link class="no-color-change" tag="a" to="/faq">FAQ</router-link>
-                    </b-nav-item>
-                    <b-nav-item>
-                        <router-link class="no-color-change" tag="a" to="/agreements">ご利用について</router-link>
-                    </b-nav-item>
-                </b-navbar-nav>
-            </b-collapse>
-        </b-navbar>
-        <router-view></router-view>
+        <top-page></top-page>
     </div>
     <script src="./scripts/vue.js"></script>
     <script src="./scripts/vue-router.js"></script>
@@ -42,11 +22,5 @@
     <script src="./scripts/axios.min.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
-
-<style scoped>
-    a.no-color-change {
-        color: white;
-    }
-</style>
 
 </html>
